# rust-clean-architecture

./: Cargo.toml  README.md
src/: main.rs  main.txt
src/commands/: mod.rs  users.rs
src/common/: cqrs.rs  mod.rs
src/domain/: users.rs
src/handlers/: users.rs
src/helper/: json.rs
src/infra/: cqrs.rs
src/infra/inmemory/: users.rs
src/models/: users.rs
src/queries/: users.rs
