[package]
name = "rust-hyper-sample"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.14", features = ["full"] }
tokio = { version = "1.13", features = ["full"] }
quote = "1.0.10"
syn = { version = "1.0.81", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"