[package]
name = "rust-hyper-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#hyper = { version = "0.14.14", features = ["full"] }


[dependencies]
quote = "1.0.10"
syn = { version = "1.0.81", features = ["full"] }
validator = { version = "0.12", features = ["derive"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
anyhow = "1.0.45"
mockall = "0.10.2"
lazy_static = "1.4.0"
tokio = { version = "1.13", features = ["full"] }
poem = "1.0.23"
