[package]
name = "rust-clean-architecture"
version = "0.1.0"
edition = "2021"

[dependencies]
quote = "1.0.10"
syn = { version = "1.0.81", features = ["full"] }
validator = { version = "0.12", features = ["derive"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
anyhow = "1.0.45"
mockall = "0.10.2"
lazy_static = "1.4.0"
actix-web = "3.3.2"
[dependencies.serde_with]
version = "1.11.0"
features = [ "macros" ]
